syntax = "proto3";

option go_package = "github.com/maxshend/tiny_gomail/tinygomail";
option java_multiple_files = true;
option java_package = "com.github.maxshend.tinygomail";
option java_outer_classname = "TinyGomailProto";

package tinygomail; 

service TinyGomail {
  rpc SendTextMessage(EmailMessage) returns (SendResponse);
  rpc SendHTMLMessage(EmailMessage) returns (SendResponse);
}

message EmailMessage {
  string body = 1;
  string subject = 2;
  string from = 3;
  string to = 4;
}

message SendResponse {
  string message = 1;
}
